@@ -31,7 +31,6 @@
             System.ComponentModel.ComponentResourceManager resources = new System.ComponentModel.ComponentResourceManager(typeof(ExportTool));
             this.txbLog = new System.Windows.Forms.TextBox();
             this.folderBrowserDialog1 = new System.Windows.Forms.FolderBrowserDialog();
-            this.lsbTables = new System.Windows.Forms.ListBox();
             this.saveFileDialog1 = new System.Windows.Forms.SaveFileDialog();
             this.openFileDialog1 = new System.Windows.Forms.OpenFileDialog();
             this.toolStrip2 = new System.Windows.Forms.ToolStrip();
@@ -39,40 +38,29 @@
             this.toolStripSeparator1 = new System.Windows.Forms.ToolStripSeparator();
             this.toolStripLabel1 = new System.Windows.Forms.ToolStripLabel();
             this.ddlEncoding = new System.Windows.Forms.ToolStripComboBox();
-            this.toolStripSeparator2 = new System.Windows.Forms.ToolStripSeparator();
             this.butSelectFolder = new System.Windows.Forms.ToolStripButton();
             this.lblTableNames = new System.Windows.Forms.Label();
-            this.gv = new System.Windows.Forms.DataGridView();
             this.label1 = new System.Windows.Forms.Label();
             this.statusStrip1 = new System.Windows.Forms.StatusStrip();
             this.lblStatus = new System.Windows.Forms.ToolStripStatusLabel();
+            this.lsbTables = new System.Windows.Forms.ListBox();
+            this.lsbColumns = new System.Windows.Forms.ListBox();
             this.toolStrip2.SuspendLayout();
-            ((System.ComponentModel.ISupportInitialize)(this.gv)).BeginInit();
             this.statusStrip1.SuspendLayout();
             this.SuspendLayout();
             // 
             // txbLog
             // 
-            this.txbLog.Dock = System.Windows.Forms.DockStyle.Fill;
+            this.txbLog.Dock = System.Windows.Forms.DockStyle.Bottom;
             this.txbLog.Font = new System.Drawing.Font("Courier New", 8.25F, System.Drawing.FontStyle.Regular, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
             this.txbLog.ForeColor = System.Drawing.Color.Black;
-            this.txbLog.Location = new System.Drawing.Point(0, 239);
+            this.txbLog.Location = new System.Drawing.Point(0, 236);
             this.txbLog.Multiline = true;
             this.txbLog.Name = "txbLog";
             this.txbLog.ReadOnly = true;
             this.txbLog.ScrollBars = System.Windows.Forms.ScrollBars.Vertical;
-            this.txbLog.Size = new System.Drawing.Size(568, 264);
+            this.txbLog.Size = new System.Drawing.Size(711, 245);
             this.txbLog.TabIndex = 16;
-            // 
-            // lsbTables
-            // 
-            this.lsbTables.Dock = System.Windows.Forms.DockStyle.Top;
-            this.lsbTables.FormattingEnabled = true;
-            this.lsbTables.Location = new System.Drawing.Point(0, 38);
-            this.lsbTables.Name = "lsbTables";
-            this.lsbTables.Size = new System.Drawing.Size(568, 147);
-            this.lsbTables.TabIndex = 10;
-            this.lsbTables.SelectedIndexChanged += new System.EventHandler(this.lsbTables_SelectedIndexChanged);
             // 
             // openFileDialog1
             // 
@@ -85,11 +73,10 @@
             this.toolStripSeparator1,
             this.toolStripLabel1,
             this.ddlEncoding,
-            this.toolStripSeparator2,
             this.butSelectFolder});
             this.toolStrip2.Location = new System.Drawing.Point(0, 0);
             this.toolStrip2.Name = "toolStrip2";
-            this.toolStrip2.Size = new System.Drawing.Size(568, 25);
+            this.toolStrip2.Size = new System.Drawing.Size(711, 25);
             this.toolStrip2.TabIndex = 22;
             this.toolStrip2.Text = "toolStrip2";
             // 
@@ -116,13 +103,9 @@
             // 
             // ddlEncoding
             // 
+            this.ddlEncoding.FlatStyle = System.Windows.Forms.FlatStyle.System;
             this.ddlEncoding.Name = "ddlEncoding";
             this.ddlEncoding.Size = new System.Drawing.Size(121, 25);
-            // 
-            // toolStripSeparator2
-            // 
-            this.toolStripSeparator2.Name = "toolStripSeparator2";
-            this.toolStripSeparator2.Size = new System.Drawing.Size(6, 25);
             // 
             // butSelectFolder
             // 
@@ -141,30 +124,17 @@
             this.lblTableNames.ForeColor = System.Drawing.Color.SteelBlue;
             this.lblTableNames.Location = new System.Drawing.Point(0, 25);
             this.lblTableNames.Name = "lblTableNames";
-            this.lblTableNames.Size = new System.Drawing.Size(568, 13);
+            this.lblTableNames.Size = new System.Drawing.Size(711, 13);
             this.lblTableNames.TabIndex = 28;
             this.lblTableNames.Text = "Tables in XML file (select to see column names)";
-            // 
-            // gv
-            // 
-            this.gv.AllowUserToAddRows = false;
-            this.gv.AllowUserToDeleteRows = false;
-            this.gv.AllowUserToOrderColumns = true;
-            this.gv.AllowUserToResizeRows = false;
-            this.gv.ColumnHeadersHeightSizeMode = System.Windows.Forms.DataGridViewColumnHeadersHeightSizeMode.AutoSize;
-            this.gv.Dock = System.Windows.Forms.DockStyle.Top;
-            this.gv.Location = new System.Drawing.Point(0, 198);
-            this.gv.Name = "gv";
-            this.gv.Size = new System.Drawing.Size(568, 41);
-            this.gv.TabIndex = 31;
             // 
             // label1
             // 
             this.label1.Dock = System.Windows.Forms.DockStyle.Top;
             this.label1.ForeColor = System.Drawing.Color.SteelBlue;
-            this.label1.Location = new System.Drawing.Point(0, 185);
+            this.label1.Location = new System.Drawing.Point(270, 38);
             this.label1.Name = "label1";
-            this.label1.Size = new System.Drawing.Size(568, 13);
+            this.label1.Size = new System.Drawing.Size(441, 13);
             this.label1.TabIndex = 32;
             this.label1.Text = "Column Names";
             // 
@@ -174,7 +144,7 @@
             this.lblStatus});
             this.statusStrip1.Location = new System.Drawing.Point(0, 481);
             this.statusStrip1.Name = "statusStrip1";
-            this.statusStrip1.Size = new System.Drawing.Size(568, 22);
+            this.statusStrip1.Size = new System.Drawing.Size(711, 22);
             this.statusStrip1.TabIndex = 33;
             this.statusStrip1.Text = "statusStrip1";
             // 
@@ -183,25 +153,43 @@
             this.lblStatus.Name = "lblStatus";
             this.lblStatus.Size = new System.Drawing.Size(0, 17);
             // 
+            // lsbTables
+            // 
+            this.lsbTables.Dock = System.Windows.Forms.DockStyle.Left;
+            this.lsbTables.FormattingEnabled = true;
+            this.lsbTables.Location = new System.Drawing.Point(0, 38);
+            this.lsbTables.Name = "lsbTables";
+            this.lsbTables.Size = new System.Drawing.Size(270, 198);
+            this.lsbTables.TabIndex = 10;
+            this.lsbTables.SelectedIndexChanged += new System.EventHandler(this.lsbTables_SelectedIndexChanged);
+            // 
+            // lsbColumns
+            // 
+            this.lsbColumns.Dock = System.Windows.Forms.DockStyle.Fill;
+            this.lsbColumns.FormattingEnabled = true;
+            this.lsbColumns.Location = new System.Drawing.Point(270, 51);
+            this.lsbColumns.Name = "lsbColumns";
+            this.lsbColumns.Size = new System.Drawing.Size(441, 185);
+            this.lsbColumns.TabIndex = 34;
+            // 
             // ExportTool
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(568, 503);
-            this.Controls.Add(this.statusStrip1);
-            this.Controls.Add(this.txbLog);
-            this.Controls.Add(this.gv);
+            this.ClientSize = new System.Drawing.Size(711, 503);
+            this.Controls.Add(this.lsbColumns);
             this.Controls.Add(this.label1);
             this.Controls.Add(this.lsbTables);
             this.Controls.Add(this.lblTableNames);
             this.Controls.Add(this.toolStrip2);
-            this.MinimumSize = new System.Drawing.Size(380, 541);
+            this.Controls.Add(this.txbLog);
+            this.Controls.Add(this.statusStrip1);
+            this.MinimumSize = new System.Drawing.Size(600, 541);
             this.Name = "ExportTool";
             this.ShowIcon = false;
             this.Text = "ExportTool";
             this.toolStrip2.ResumeLayout(false);
             this.toolStrip2.PerformLayout();
-            ((System.ComponentModel.ISupportInitialize)(this.gv)).EndInit();
             this.statusStrip1.ResumeLayout(false);
             this.statusStrip1.PerformLayout();
             this.ResumeLayout(false);
@@ -213,20 +201,19 @@
 
         private System.Windows.Forms.TextBox txbLog;
         private System.Windows.Forms.FolderBrowserDialog folderBrowserDialog1;
-        private System.Windows.Forms.ListBox lsbTables;
         private System.Windows.Forms.SaveFileDialog saveFileDialog1;
         private System.Windows.Forms.OpenFileDialog openFileDialog1;
         private System.Windows.Forms.ToolStrip toolStrip2;
         private System.Windows.Forms.ToolStripButton butSelectXml;
         private System.Windows.Forms.Label lblTableNames;
-        private System.Windows.Forms.DataGridView gv;
         private System.Windows.Forms.Label label1;
         private System.Windows.Forms.ToolStripSeparator toolStripSeparator1;
         private System.Windows.Forms.ToolStripLabel toolStripLabel1;
         private System.Windows.Forms.ToolStripComboBox ddlEncoding;
         private System.Windows.Forms.StatusStrip statusStrip1;
         private System.Windows.Forms.ToolStripStatusLabel lblStatus;
-        private System.Windows.Forms.ToolStripSeparator toolStripSeparator2;
         private System.Windows.Forms.ToolStripButton butSelectFolder;
+        private System.Windows.Forms.ListBox lsbTables;
+        private System.Windows.Forms.ListBox lsbColumns;
     }
 }
