@@ -1,8 +1,11 @@
 1.6.0
 -Solution Cleanup
 -Added XML test data and referenced it using DeploymentItem attribute. Requires Local.TestSettings to have deployment enabled and reference the xml source directory or file. 
+-In GUI the initially selected value is now Default instead of Unicode.
+-In GUI added the option to automatically rename a 'table' element to prevent naming clashes between tables and columns occurs, which otherwise result in a DuplicateNameException.
 -Bug fix: DuplicateName: A column named 'bla' already belongs to this DataTable: cannot set a nested table name to the same name.
 -Bug fix: encoding was not working correctly in XmlToCsvUsingLinq class when converted XML.
+
 ===============================================
 
 1.5.0
